fix select pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,10 +34,10 @@ unbind %
 bind v split-window -h
 
 # bind switch pane key like vim
-bind h selectp -L 10
-bind j selectp -D 10
-bind k selectp -U 10
-bind l selectp -R 10
+bind h selectp -L
+bind j selectp -D
+bind k selectp -U
+bind l selectp -R
 
 bind -r C-h resizep -L
 bind -r C-j resizep -D
