--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,69 +1,65 @@
-# change prefix to c-a
-unbind C-b
-set -g prefix C-a
 
-bind C-a send-prefix
+# 改变按键前缀
+unbind C-b
+set-option -g prefix `
+bind ` send-prefix
 
 set -g default-terminal "screen-256color" 
 
-# reload config
-bind r source-file ~/.tmux.conf \; display 'reload config'
+# 绑定重新加载配置按键
+bind r source-file ~/.tmux.conf
+
+set-option -g allow-rename off
 
 set -g mouse on
+set-option -s escape-time 10
 
-set -s escape-time 10
-
-set -g status-keys vi
-
-# bell
+# 闪烁代替bell
 set -g visual-activity on
 set -g visual-bell on
 
-# copy mode key bind
+# copy模式用vi的风格
+set-option -g status-keys vi
 setw -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# pane key bind
-# bind s instead of " as pane herizontal split like vim
-unbind '"'
-bind s split-window -v
+# pane切换
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-# bind v instead of % as pane herizontal split like vim
-unbind %
-bind v split-window -h
+bind-key C-h resize-pane -L
+bind-key C-j resize-pane -D
+bind-key C-k resize-pane -U
+bind-key C-l resize-pane -R
 
-# bind switch pane key like vim
-bind h selectp -L
-bind j selectp -D
-bind k selectp -U
-bind l selectp -R
+# window切换
+bind-key -r n select-window -t +
+bind-key -r p select-window -t -
 
-bind -r C-h resizep -L
-bind -r C-j resizep -D
-bind -r C-k resizep -U
-bind -r C-l resizep -R
+bind-key s split-window -v # split pane horizontally
+bind-key v split-window -h # split pane vertically
+unbind '"' # unbind horizontal split
+unbind %   # unbind vertical split
 
-# window key bind
-bind -r n select-window -t +
-bind -r p select-window -t -
-
-# status bar theme
-# color
+# 状态栏
+# 颜色
 set -g status-bg black
 set -g status-fg white
 
-# alignment
-set -g status-justify centre
+# 对齐方式
+set-option -g status-justify centre
 
-# left corner
-set -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
-set -g status-left-length 20
+# 左下角
+set-option -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
+set-option -g status-left-length 20
 
-# windows name list
-set -g automatic-rename on
-setw -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
-setw -g window-status-current-format '#[fg=cyan]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]'
+# 窗口列表
+# set -g automatic-rename on
+set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
+set-window-option -g window-status-current-format '#[fg=cyan]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]'
 
-# right corner
+# 右下角
 set -g status-right '#[fg=green][#[fg=cyan]%Y-%m-%d#[fg=green]]'
