add restore environment plugins.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-
 # 改变按键前缀
 unbind C-b
 set-option -g prefix `
@@ -63,3 +62,17 @@ set-window-option -g window-status-current-format '#[fg=cyan]#I#[fg=blue]:#[fg=c
 
 # 右下角
 set -g status-right '#[fg=green][#[fg=cyan]%Y-%m-%d#[fg=green]]'
+
+# 添加插件
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# 自动恢复环境
+set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'ssh psql mysql'
+
+# 初始化插件
+run -b '~/.tmux/plugins/tpm/tpm'
