--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,7 @@ set-option -g status-keys vi
 setw -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
 
 # pane切换
 bind-key h select-pane -L
